# mitm

./: Cargo.toml  cert.crt  cert.key  hello.txt
src/: cert.rs  main.rs
